--- a/src/main/webapp/WEB-INF/views/court/showCourts.html
+++ b/src/main/webapp/WEB-INF/views/court/showCourts.html
@@ -33,7 +33,7 @@
 		<a th:href="@{/create-court}">Create Court</a>
 	</p>
 	<p>
-		<a th:href="@{/home}">Home</a>
+		<a th:href="@{/index}">Index</a>
 	</p>
 </body>
 </html>
